trunk/Archive2/d2/482c12bdeead6b/output
main.cpp: In function 'int main()':
main.cpp:8:15: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
     if (_a != _b) { \
               ^
main.cpp:20:2: note: in expansion of macro 'ASSERT_EQ'
  ASSERT_EQ(y, 123); // fails on -Werror
  ^
cc1plus: all warnings being treated as errors
